--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     "homepage": "https://github.com/arif/yii2-magnific-popup",
     "authors": [
         {
-            "name": "M arif Alfian",
+            "name": "Arif",
             "email": "iyan2x@gmail.com",
             "role": "Developer"
         }
